Changelog
=========

0.9.8 - Unreleased
------------------


0.9.8b3 - 2008-10-16
--------------------

- Bugfix: The default member-area was created before the portal
  was fully configured.
  [stefan]

- Bugfix: Reindex security of member-area after taking ownership.
  [stefan]

0.9.8b2 - 2008-10-09
--------------------

- Egg was broken due to use of svn export. Who'd have thunk
  setuptools makes a difference?
  [stefan]

0.9.8b1 - 2008-10-05
--------------------

- Install all Plone products quietly.
- Eggified Products.PloneTestCase.

0.9.7
-----

- Added PLONE31 and PLONE40 constants.
- The PloneSite layer can now be set up more than once. Thanks to
  Andreas Zeidler and Balazs Ree.

0.9.6
-----

- Deal with new skin setup in CMF 2.1 and up.
- Provide hasPackage and installPackage if ZopeTestCase supports it.
- Changed license to GPL, cleaning up my act.
- Use new stateless GenericSetup API in Plone 3.0 and up.

0.9.4
-----

- Minor test fixes to cater for changes in PlonePAS and CMF.

0.9.3
-----

- In 0.9.2 we accidentally lost the ability to override getPortal. Fixed.
- Spell 'placefulSetup' like 'placefulSetUp' for consistency with
  zope.app.testing.

0.9.2
-----

- Improved support for the local component registry. We now register it
  right after it has been created in Plone >= 3.0, as it is needed during
  site setup. We also set the portal as a site whenever it is accessed
  to get CMF skin acquisition to work.

0.9.0
-----

- Prepared for switching ZopeTestCase to Zope3 interfaces.
- Load etc/site.zcml lazily instead of using the wrapper.
- Import extension profiles one by one to gain better control.
- Added a PloneTestCase.addProfile() method that allows to import
  extension profiles into the site. This is an alternative to
  passing the 'extension_profiles' argument to setupPloneSite().
- Create Plone site lazily using layer.PloneSite.
- Renamed utils.py to five.py.

0.8.6
-----
