@@ -24,6 +24,7 @@ from Products.PloneTestCase.setup import PLONE21
 from Products.PloneTestCase.setup import PLONE25
 from Products.PloneTestCase.setup import PLONE30
 from Products.PloneTestCase.setup import PLONE31
+from Products.PloneTestCase.setup import PLONE32
 from Products.PloneTestCase.setup import PLONE40
 from Products.PloneTestCase.setup import USELAYER
 from Products.PloneTestCase.setup import Z3INTERFACES
