@@ -52,6 +52,9 @@ The PloneTestCase package provides
 - The constant ``PLONE31`` which evaluates to true for Plone
   versions >= 3.1.
 
+- The constant ``PLONE32`` which evaluates to true for Plone
+  versions >= 3.2.
+
 - The constant ``PLONE40`` which evaluates to true for Plone
   versions >= 4.0.
 
